# netops-utilities

./: .gitignore  README.md  core.py  main.py  pyproject.toml
AutoVPN/: PLAN_AUTOMATIZACION.md  README.md  VPN_PLAN.md  deploy_vpn.py  generate_deployment.py  validate_vpn.py  vpn.py  vpn_config.json
AutoVPN-API/: README.md  deploy_vpn.py  vpn_api_templates.py
AutoVPN-SSH/: PLAN_AUTOMATIZACION.md  README.md  deploy_vpn.py  vpn_templates.py
AutoVPN/AutoVPN-API/: README.md  deploy_vpn.py  verify_vpn.py  vpn_api_templates.py
AutoVPN/AutoVPN-API/outputs/: fortigate_payloads.json  paloalto_payloads.json
AutoVPN/AutoVPN-SSH/: README.md  generate_deployment.py  validate_vpn.py  vpn_config.json  vpn_templates.py
AutoVPN/AutoVPN-SSH/outputs/: fortigate_cli.txt  paloalto_cli.txt
AutoVPN/outputs/: VPN_PLAN.md  fortigate_cli.txt  fortigate_payload.json  paloalto_cli.txt  paloalto_commands.txt
NetConfigurator/: README.md  core.py  main.py
NetConfigurator/screenshots/: ORDER.md
